Transform and merge the rating data.

--- a/Movies_ETL_Practice.ipynb
+++ b/Movies_ETL_Practice.ipynb
@@ -2737,7 +2737,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "467e4c0f",
+   "id": "272c04e9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2748,7 +2748,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "03aedd35",
+   "id": "89ee6caf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2758,7 +2758,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "bdf0b739",
+   "id": "c9f912eb",
    "metadata": {},
    "outputs": [
     {
@@ -2794,7 +2794,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "80232e2e",
+   "id": "7571b05b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2805,7 +2805,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "37aac1c0",
+   "id": "f2fd7304",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2815,7 +2815,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "92e5b18b",
+   "id": "ac545067",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2825,7 +2825,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "7aa19178",
+   "id": "50a40f64",
    "metadata": {},
    "outputs": [
     {
@@ -2846,7 +2846,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "2957aa8d",
+   "id": "9d71f486",
    "metadata": {},
    "outputs": [
     {
@@ -2868,7 +2868,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "585fe0e1",
+   "id": "3776ee6d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2879,7 +2879,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "0d93af24",
+   "id": "8c41d21a",
    "metadata": {},
    "outputs": [
     {
@@ -2946,7 +2946,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae3b8cd8",
+   "id": "75925f91",
    "metadata": {},
    "source": [
     "# Fix Pattern Matches"
@@ -2955,7 +2955,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "43f09c8f",
+   "id": "806fe688",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2974,7 +2974,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "fcb2b7d4",
+   "id": "dba0dda3",
    "metadata": {},
    "outputs": [
     {
@@ -3081,7 +3081,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "cbe3fef0",
+   "id": "8dd50266",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3134,7 +3134,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "2913368b",
+   "id": "601d0c1c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3144,7 +3144,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "60d850dc",
+   "id": "ddfb5b2e",
    "metadata": {},
    "outputs": [
     {
@@ -3633,7 +3633,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "62984905",
+   "id": "265a0160",
    "metadata": {
     "scrolled": true
    },
@@ -3645,7 +3645,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "1200cffe",
+   "id": "5107f45d",
    "metadata": {},
    "outputs": [
     {
@@ -3676,7 +3676,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ab3a51e",
+   "id": "8cc9fb31",
    "metadata": {},
    "source": [
     "# 8.3.11 Parse Budget Data"
@@ -3685,7 +3685,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "32ad4aad",
+   "id": "f17cc399",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3695,7 +3695,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "c2fc029a",
+   "id": "10778cbb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3705,7 +3705,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "c4d0a2ee",
+   "id": "f4eef7e2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3715,7 +3715,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "2be82089",
+   "id": "c44d392f",
    "metadata": {},
    "outputs": [
     {
@@ -3747,7 +3747,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "1b8c2e90",
+   "id": "4dba8691",
    "metadata": {},
    "outputs": [
     {
@@ -3808,7 +3808,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "5f1052c0",
+   "id": "d3636ea1",
    "metadata": {},
    "outputs": [
     {
@@ -3877,7 +3877,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "1a9735fb",
+   "id": "32e135e8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3888,7 +3888,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "f3c19a40",
+   "id": "d926c067",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3898,7 +3898,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "e0425fc6",
+   "id": "20740725",
    "metadata": {},
    "outputs": [
     {
@@ -3929,7 +3929,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "110b9816",
+   "id": "d0d514e3",
    "metadata": {},
    "source": [
     "# Parse Release Date"
@@ -3938,7 +3938,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "64a85e71",
+   "id": "3709eb6c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3948,7 +3948,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "8ed0c04c",
+   "id": "dc8dfc69",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3962,7 +3962,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "e9e46e0e",
+   "id": "f8620026",
    "metadata": {},
    "outputs": [
     {
@@ -4068,7 +4068,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "4d54026d",
+   "id": "e1d04362",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4078,7 +4078,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "ffc7881f",
+   "id": "5aa00f95",
    "metadata": {},
    "outputs": [
     {
@@ -4109,7 +4109,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "375644c1",
+   "id": "6a7082e0",
    "metadata": {},
    "source": [
     "# Parse Running Time"
@@ -4118,7 +4118,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "fceb1634",
+   "id": "432d48fe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4128,7 +4128,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "1ba4b80b",
+   "id": "747f4739",
    "metadata": {},
    "outputs": [
     {
@@ -4149,7 +4149,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "93ec1731",
+   "id": "489aa0e4",
    "metadata": {},
    "outputs": [
     {
@@ -4181,7 +4181,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "fe586dc0",
+   "id": "c44a3975",
    "metadata": {},
    "outputs": [
     {
@@ -4202,7 +4202,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "4a2bd5ef",
+   "id": "88af6cb1",
    "metadata": {},
    "outputs": [
     {
@@ -4240,7 +4240,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "id": "9ef8f264",
+   "id": "3c56433a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4250,7 +4250,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "10ef55da",
+   "id": "ab45e619",
    "metadata": {},
    "outputs": [
     {
@@ -4282,7 +4282,7 @@
   {
    "cell_type": "code",
    "execution_count": 182,
-   "id": "b7df8d33",
+   "id": "5d296f90",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4298,7 +4298,7 @@
   {
    "cell_type": "code",
    "execution_count": 113,
-   "id": "6f8b242b",
+   "id": "38997976",
    "metadata": {},
    "outputs": [
     {
@@ -4319,7 +4319,7 @@
   {
    "cell_type": "code",
    "execution_count": 183,
-   "id": "e8002b86",
+   "id": "a26bcae9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4329,7 +4329,7 @@
   {
    "cell_type": "code",
    "execution_count": 184,
-   "id": "fc520571",
+   "id": "e94bc570",
    "metadata": {},
    "outputs": [
     {
@@ -4361,7 +4361,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1495510f",
+   "id": "3ab5a66e",
    "metadata": {
     "scrolled": true
    },
@@ -4372,7 +4372,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "744b65cc",
+   "id": "331df378",
    "metadata": {},
    "source": [
     "# 8.3.12 Clean the Kaggle Data"
@@ -4381,7 +4381,7 @@
   {
    "cell_type": "code",
    "execution_count": 147,
-   "id": "1f4ef02e",
+   "id": "e61fdacf",
    "metadata": {},
    "outputs": [
     {
@@ -4426,7 +4426,7 @@
   {
    "cell_type": "code",
    "execution_count": 148,
-   "id": "19b9aa5b",
+   "id": "40aa2013",
    "metadata": {},
    "outputs": [
     {
@@ -4452,7 +4452,7 @@
   {
    "cell_type": "code",
    "execution_count": 149,
-   "id": "d4c70ace",
+   "id": "c7efdddf",
    "metadata": {},
    "outputs": [
     {
@@ -4628,7 +4628,7 @@
   {
    "cell_type": "code",
    "execution_count": 150,
-   "id": "1c14ea11",
+   "id": "21810894",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4638,7 +4638,7 @@
   {
    "cell_type": "code",
    "execution_count": 159,
-   "id": "5a1604e3",
+   "id": "eb3022ef",
    "metadata": {},
    "outputs": [
     {
@@ -4660,7 +4660,7 @@
   {
    "cell_type": "code",
    "execution_count": 152,
-   "id": "f363dad6",
+   "id": "88ed8bbb",
    "metadata": {},
    "outputs": [
     {
@@ -4692,7 +4692,7 @@
   {
    "cell_type": "code",
    "execution_count": 157,
-   "id": "4d87711e",
+   "id": "c4760b20",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4702,7 +4702,7 @@
   {
    "cell_type": "code",
    "execution_count": 158,
-   "id": "395cace5",
+   "id": "912ff52a",
    "metadata": {},
    "outputs": [
     {
@@ -4724,7 +4724,7 @@
   {
    "cell_type": "code",
    "execution_count": 160,
-   "id": "d980f3fd",
+   "id": "38a1100b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4736,7 +4736,7 @@
   {
    "cell_type": "code",
    "execution_count": 161,
-   "id": "ba702ca0",
+   "id": "200b41e0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4745,7 +4745,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "76982059",
+   "id": "8fdcab27",
    "metadata": {},
    "source": [
     "# Reasonability Checks on Ratings Data"
@@ -4754,7 +4754,7 @@
   {
    "cell_type": "code",
    "execution_count": 162,
-   "id": "e2ff5243",
+   "id": "567fe64d",
    "metadata": {},
    "outputs": [
     {
@@ -4790,7 +4790,7 @@
   {
    "cell_type": "code",
    "execution_count": 163,
-   "id": "3e092d62",
+   "id": "023fa2a1",
    "metadata": {},
    "outputs": [
     {
@@ -4822,7 +4822,7 @@
   {
    "cell_type": "code",
    "execution_count": 164,
-   "id": "db4b6e68",
+   "id": "5bf89285",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4831,7 +4831,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d367f8aa",
+   "id": "c72186ee",
    "metadata": {},
    "source": [
     "## Histogram of the rating distributions"
@@ -4840,7 +4840,7 @@
   {
    "cell_type": "code",
    "execution_count": 165,
-   "id": "6271686a",
+   "id": "2e613ecc",
    "metadata": {},
    "outputs": [
     {
@@ -4882,7 +4882,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8407183c",
+   "id": "e4ab41dc",
    "metadata": {},
    "source": [
     " # Merge Wikipedia and Kaggle Metadata"
@@ -4891,7 +4891,7 @@
   {
    "cell_type": "code",
    "execution_count": 187,
-   "id": "e875d345",
+   "id": "1e74f95e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4901,7 +4901,7 @@
   {
    "cell_type": "code",
    "execution_count": 188,
-   "id": "485ce4ba",
+   "id": "8575ed28",
    "metadata": {},
    "outputs": [
     {
@@ -5020,7 +5020,7 @@
   {
    "cell_type": "code",
    "execution_count": 189,
-   "id": "e314ff1e",
+   "id": "b6a90370",
    "metadata": {},
    "outputs": [
     {
@@ -5151,7 +5151,7 @@
   {
    "cell_type": "code",
    "execution_count": 190,
-   "id": "273ac8c1",
+   "id": "56c1afbd",
    "metadata": {},
    "outputs": [
     {
@@ -5225,7 +5225,7 @@
   {
    "cell_type": "code",
    "execution_count": 191,
-   "id": "5e866552",
+   "id": "6d961b1c",
    "metadata": {},
    "outputs": [
     {
@@ -5251,7 +5251,7 @@
   {
    "cell_type": "code",
    "execution_count": 192,
-   "id": "c6a5c882",
+   "id": "8492469f",
    "metadata": {},
    "outputs": [
     {
@@ -5284,7 +5284,7 @@
   {
    "cell_type": "code",
    "execution_count": 171,
-   "id": "82b1a616",
+   "id": "92afcfab",
    "metadata": {},
    "outputs": [
     {
@@ -5317,7 +5317,7 @@
   {
    "cell_type": "code",
    "execution_count": 193,
-   "id": "4e166406",
+   "id": "e64f9271",
    "metadata": {},
    "outputs": [
     {
@@ -5350,7 +5350,7 @@
   {
    "cell_type": "code",
    "execution_count": 194,
-   "id": "caf92fc8",
+   "id": "f0b8ac68",
    "metadata": {},
    "outputs": [
     {
@@ -5383,7 +5383,7 @@
   {
    "cell_type": "code",
    "execution_count": 195,
-   "id": "4922a4c0",
+   "id": "cf29f55a",
    "metadata": {},
    "outputs": [
     {
@@ -5416,7 +5416,7 @@
   {
    "cell_type": "code",
    "execution_count": 196,
-   "id": "6e98d6a3",
+   "id": "53f5062b",
    "metadata": {},
    "outputs": [
     {
@@ -5533,7 +5533,7 @@
   {
    "cell_type": "code",
    "execution_count": 197,
-   "id": "5bdd563d",
+   "id": "a4e099f7",
    "metadata": {},
    "outputs": [
     {
@@ -5554,7 +5554,7 @@
   {
    "cell_type": "code",
    "execution_count": 198,
-   "id": "69a04d44",
+   "id": "6595e167",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5564,7 +5564,7 @@
   {
    "cell_type": "code",
    "execution_count": 199,
-   "id": "b6f3a358",
+   "id": "ee325a03",
    "metadata": {},
    "outputs": [
     {
@@ -6027,7 +6027,7 @@
   {
    "cell_type": "code",
    "execution_count": 201,
-   "id": "e162e166",
+   "id": "c9795976",
    "metadata": {},
    "outputs": [
     {
@@ -6059,7 +6059,7 @@
   {
    "cell_type": "code",
    "execution_count": 202,
-   "id": "86901b1b",
+   "id": "be6624e7",
    "metadata": {},
    "outputs": [
     {
@@ -6098,7 +6098,7 @@
   {
    "cell_type": "code",
    "execution_count": 203,
-   "id": "7fe7c5c8",
+   "id": "34d7e1be",
    "metadata": {},
    "outputs": [
     {
@@ -6229,7 +6229,7 @@
   {
    "cell_type": "code",
    "execution_count": 204,
-   "id": "6036edbd",
+   "id": "533b75cc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6239,7 +6239,7 @@
   {
    "cell_type": "code",
    "execution_count": 205,
-   "id": "afc022d9",
+   "id": "701f1578",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6253,7 +6253,7 @@
   {
    "cell_type": "code",
    "execution_count": 206,
-   "id": "0bbfda3e",
+   "id": "fa438869",
    "metadata": {},
    "outputs": [
     {
@@ -6745,7 +6745,7 @@
   {
    "cell_type": "code",
    "execution_count": 207,
-   "id": "abf91be0",
+   "id": "236bd52f",
    "metadata": {},
    "outputs": [
     {
@@ -6768,7 +6768,7 @@
   {
    "cell_type": "code",
    "execution_count": 208,
-   "id": "d302973f",
+   "id": "fc1a283b",
    "metadata": {},
    "outputs": [
     {
@@ -6790,7 +6790,7 @@
   {
    "cell_type": "code",
    "execution_count": 209,
-   "id": "ce4d8e74",
+   "id": "c2e8fe4b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6804,8 +6804,84 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 210,
+   "id": "21431c23",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "movies_df.rename({'id':'kaggle_id',\n",
+    "                  'title_kaggle':'title',\n",
+    "                  'url':'wikipedia_url',\n",
+    "                  'budget_kaggle':'budget',\n",
+    "                  'release_date_kaggle':'release_date',\n",
+    "                  'Country':'country',\n",
+    "                  'Distributor':'distributor',\n",
+    "                  'Producer(s)':'producers',\n",
+    "                  'Director':'director',\n",
+    "                  'Starring':'starring',\n",
+    "                  'Cinematography':'cinematography',\n",
+    "                  'Editor(s)':'editors',\n",
+    "                  'Writer(s)':'writers',\n",
+    "                  'Composer(s)':'composers',\n",
+    "                  'Based on':'based_on'\n",
+    "                 }, axis='columns', inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f9b8c25a",
+   "metadata": {},
+   "source": [
+    " # 8.4.2 Transform and Merge Rating Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 211,
+   "id": "567eb70e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rating_counts = ratings.groupby(['movieId','rating'], as_index=False).count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 212,
+   "id": "9453fa71",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rating_counts = ratings.groupby(['movieId','rating'], as_index=False).count() \\\n",
+    "                .rename({'userId':'count'}, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 213,
+   "id": "afc7bc6c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rating_counts = ratings.groupby(['movieId','rating'], as_index=False).count() \\\n",
+    "                .rename({'userId':'count'}, axis=1) \\\n",
+    "                .pivot(index='movieId',columns='rating', values='count')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 214,
+   "id": "f35c9283",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rating_counts.columns = ['rating_' + str(col) for col in rating_counts.columns]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "dd7b6b1d",
+   "id": "d335569b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -6813,7 +6889,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd22cb0b",
+   "id": "871edaa1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c707ac91",
    "metadata": {},
    "outputs": [],
    "source": []
