--- a/Movies_ETL_Practice.ipynb
+++ b/Movies_ETL_Practice.ipynb
@@ -4900,6 +4900,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 229,
+   "id": "1ef0cfbd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['imdb_id', 'kaggle_id', 'title', 'original_title', 'tagline',\n",
+       "       'belongs_to_collection', 'wikipedia_url', 'imdb_link', 'runtime',\n",
+       "       'budget', 'revenue', 'release_date', 'popularity', 'vote_average',\n",
+       "       'vote_count', 'genres', 'original_language', 'overview',\n",
+       "       'spoken_languages', 'country', 'production_companies',\n",
+       "       'production_countries', 'distributor', 'producers', 'director',\n",
+       "       'starring', 'cinematography', 'editors', 'writers', 'composers',\n",
+       "       'based_on'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 229,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "movies_df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 188,
    "id": "2a547df1",
    "metadata": {},
@@ -6971,7 +7000,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79cdfa73",
+   "id": "af58e70e",
    "metadata": {},
    "source": [
     "# Import the Ratings Data"
