Updating ETL create database notebook.

--- a/ETL_create_database.ipynb
+++ b/ETL_create_database.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +202,6 @@
     "    movies_df = pd.merge(wiki_movies_df, kaggle_metadata, on='imdb_id', suffixes=['_wiki','_kaggle'])\n",
     "\n",
     "    # 4. Drop unnecessary columns from the merged DataFrame.\n",
-    "    movies_df = movies_df.drop(movies_df[(movies_df['release_date_wiki'] > '1996-01-01') & (movies_df['release_date_kaggle'] < '1965-01-01')].index)\n",
     "    movies_df.drop(columns=['title_wiki', 'release_date_wiki', 'Language', 'Production company(s)'], inplace=True)\n",
     "\n",
     "    # 5. Add in the function to fill in the missing Kaggle data.\n",
@@ -268,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,60 +283,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "importing ratings data: rows 0 to 1000000...Done(ratings data chunk). 36.006664514541626 total seconds elapsed\n",
-      "importing ratings data: rows 1000000 to 2000000...Done(ratings data chunk). 70.88400053977966 total seconds elapsed\n",
-      "importing ratings data: rows 2000000 to 3000000...Done(ratings data chunk). 105.95539879798889 total seconds elapsed\n",
-      "importing ratings data: rows 3000000 to 4000000...Done(ratings data chunk). 140.45673155784607 total seconds elapsed\n",
-      "importing ratings data: rows 4000000 to 5000000...Done(ratings data chunk). 177.31985664367676 total seconds elapsed\n",
-      "importing ratings data: rows 5000000 to 6000000...Done(ratings data chunk). 212.16197848320007 total seconds elapsed\n",
-      "importing ratings data: rows 6000000 to 7000000...Done(ratings data chunk). 248.03147339820862 total seconds elapsed\n",
-      "importing ratings data: rows 7000000 to 8000000...Done(ratings data chunk). 285.48846459388733 total seconds elapsed\n",
-      "importing ratings data: rows 8000000 to 9000000...Done(ratings data chunk). 319.9044191837311 total seconds elapsed\n",
-      "importing ratings data: rows 9000000 to 10000000...Done(ratings data chunk). 354.6128878593445 total seconds elapsed\n",
-      "importing ratings data: rows 10000000 to 11000000...Done(ratings data chunk). 389.7001881599426 total seconds elapsed\n",
-      "importing ratings data: rows 11000000 to 12000000...Done(ratings data chunk). 424.3772702217102 total seconds elapsed\n",
-      "importing ratings data: rows 12000000 to 13000000...Done(ratings data chunk). 458.80487298965454 total seconds elapsed\n",
-      "importing ratings data: rows 13000000 to 14000000...Done(ratings data chunk). 495.10278153419495 total seconds elapsed\n",
-      "importing ratings data: rows 14000000 to 15000000...Done(ratings data chunk). 530.0011794567108 total seconds elapsed\n",
-      "importing ratings data: rows 15000000 to 16000000...Done(ratings data chunk). 561.6486558914185 total seconds elapsed\n",
-      "importing ratings data: rows 16000000 to 17000000...Done(ratings data chunk). 594.520519733429 total seconds elapsed\n",
-      "importing ratings data: rows 17000000 to 18000000...Done(ratings data chunk). 625.8487641811371 total seconds elapsed\n",
-      "importing ratings data: rows 18000000 to 19000000...Done(ratings data chunk). 657.3910212516785 total seconds elapsed\n",
-      "importing ratings data: rows 19000000 to 20000000...Done(ratings data chunk). 689.5938758850098 total seconds elapsed\n",
-      "importing ratings data: rows 20000000 to 21000000...Done(ratings data chunk). 721.786936044693 total seconds elapsed\n",
-      "importing ratings data: rows 21000000 to 22000000...Done(ratings data chunk). 753.9021213054657 total seconds elapsed\n",
-      "importing ratings data: rows 22000000 to 23000000...Done(ratings data chunk). 785.5887537002563 total seconds elapsed\n",
-      "importing ratings data: rows 23000000 to 24000000...Done(ratings data chunk). 817.0261726379395 total seconds elapsed\n",
-      "importing ratings data: rows 24000000 to 25000000...Done(ratings data chunk). 849.3855476379395 total seconds elapsed\n",
-      "importing ratings data: rows 25000000 to 26000000...Done(ratings data chunk). 881.9755070209503 total seconds elapsed\n",
-      "importing ratings data: rows 26000000 to 26024289...Done(ratings data chunk). 882.7656707763672 total seconds elapsed\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "cannot unpack non-iterable NoneType object",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_22168/738514138.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# 11. Set the three variables equal to the function created in D1.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mwiki_file\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mkaggle_file\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mratings_file\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mextract_transform_load\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mwiki_file\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mkaggle_file\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mratings_file\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m: cannot unpack non-iterable NoneType object"
+      "importing ratings data: rows 0 to 1000000...Done(ratings data chunk). 32.184563875198364 total seconds elapsed\n",
+      "importing ratings data: rows 1000000 to 2000000...Done(ratings data chunk). 64.21192836761475 total seconds elapsed\n",
+      "importing ratings data: rows 2000000 to 3000000...Done(ratings data chunk). 96.4949278831482 total seconds elapsed\n",
+      "importing ratings data: rows 3000000 to 4000000...Done(ratings data chunk). 129.10049152374268 total seconds elapsed\n",
+      "importing ratings data: rows 4000000 to 5000000...Done(ratings data chunk). 161.10687565803528 total seconds elapsed\n",
+      "importing ratings data: rows 5000000 to 6000000...Done(ratings data chunk). 193.75005435943604 total seconds elapsed\n",
+      "importing ratings data: rows 6000000 to 7000000...Done(ratings data chunk). 226.12982201576233 total seconds elapsed\n",
+      "importing ratings data: rows 7000000 to 8000000...Done(ratings data chunk). 259.087340593338 total seconds elapsed\n",
+      "importing ratings data: rows 8000000 to 9000000...Done(ratings data chunk). 291.3813350200653 total seconds elapsed\n",
+      "importing ratings data: rows 9000000 to 10000000...Done(ratings data chunk). 323.3194110393524 total seconds elapsed\n",
+      "importing ratings data: rows 10000000 to 11000000...Done(ratings data chunk). 356.1877806186676 total seconds elapsed\n",
+      "importing ratings data: rows 11000000 to 12000000...Done(ratings data chunk). 389.4549539089203 total seconds elapsed\n",
+      "importing ratings data: rows 12000000 to 13000000...Done(ratings data chunk). 421.7149429321289 total seconds elapsed\n",
+      "importing ratings data: rows 13000000 to 14000000...Done(ratings data chunk). 454.3241460323334 total seconds elapsed\n",
+      "importing ratings data: rows 14000000 to 15000000...Done(ratings data chunk). 486.2658369541168 total seconds elapsed\n",
+      "importing ratings data: rows 15000000 to 16000000...Done(ratings data chunk). 519.0500404834747 total seconds elapsed\n",
+      "importing ratings data: rows 16000000 to 17000000...Done(ratings data chunk). 550.5126316547394 total seconds elapsed\n",
+      "importing ratings data: rows 17000000 to 18000000...Done(ratings data chunk). 581.9657151699066 total seconds elapsed\n",
+      "importing ratings data: rows 18000000 to 19000000...Done(ratings data chunk). 614.0724437236786 total seconds elapsed\n",
+      "importing ratings data: rows 19000000 to 20000000...Done(ratings data chunk). 646.3219599723816 total seconds elapsed\n",
+      "importing ratings data: rows 20000000 to 21000000...Done(ratings data chunk). 678.0213963985443 total seconds elapsed\n",
+      "importing ratings data: rows 21000000 to 22000000...Done(ratings data chunk). 710.794709444046 total seconds elapsed\n",
+      "importing ratings data: rows 22000000 to 23000000...Done(ratings data chunk). 743.454695224762 total seconds elapsed\n",
+      "importing ratings data: rows 23000000 to 24000000...Done(ratings data chunk). 774.8319070339203 total seconds elapsed\n",
+      "importing ratings data: rows 24000000 to 25000000...Done(ratings data chunk). 807.6284735202789 total seconds elapsed\n",
+      "importing ratings data: rows 25000000 to 26000000...Done(ratings data chunk). 839.2063059806824 total seconds elapsed\n",
+      "importing ratings data: rows 26000000 to 26024289...Done(ratings data chunk). 840.2594902515411 total seconds elapsed\n"
      ]
     }
    ],
    "source": [
-    "# 11. Set the three\n",
-    "\n",
-    "\n",
-    "variables equal to the function created in D1.\n",
-    "wiki_file, kaggle_file, ratings_file = extract_transform_load(wiki_file, kaggle_file, ratings_file)"
+    "# 11. Set the three variables equal to the function created in D1.\n",
+    "extract_transform_load(wiki_file, kaggle_file, ratings_file)"
    ]
   }
  ],
